syntax = "proto2";

message TemporaryExposureKeyExport {
  optional fixed64 start_timestamp = 1;
  optional fixed64 end_timestamp = 2;
  optional string region = 3;
  optional int32 batch_num = 4;
  optional int32 batch_size = 5;
  repeated SignatureInfo signature_infos = 6;
  repeated TemporaryExposureKey keys = 7;
}

message SignatureInfo {
  optional string app_bundle_id = 1;
  optional string android_package = 2;
  optional string verification_key_version = 3;
  optional string verification_key_id = 4;
  optional string signature_algorithm = 5;
}

message TemporaryExposureKey {
  optional bytes key_data = 1;
  optional int32 transmission_risk_level = 2;
  optional int32 rolling_start_interval_number = 3;
  optional int32 rolling_period = 4
    [default = 144];
}

message TEKSignatureList {
  repeated TEKSignature signatures = 1;
}

message TEKSignature {
  optional SignatureInfo signature_info = 1;
  optional int32 batch_num = 2;
  optional int32 batch_size = 3;
  optional bytes signature = 4;
}